Task2/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scaletestapp
  labels:
    app: scaletestapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scaletestapp
  template:
    metadata:
      labels:
        app: scaletestapp
    spec:
      containers:
      - name: scaletestapp
        image: shestera/scaletestapp:latest
        resources:
          requests:
            memory: 10Mi
          limits:
            memory: 30Mi
        ports:
        - containerPort: 8080
