Task2/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: scaletestapp-service
spec:
  selector:
    app: scaletestapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
