Task2/dr.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: scaletestapp
spec:
  host: scaletestapp
  subsets:
  - name: v1
    labels:
      version: v1
