Task2/vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: scaletestapp
spec:
  hosts:
  - scaletestapp
  http:
  - route:
    - destination:
        host: scaletestapp
        subset: v1
